package vues;

import modele.Facade;

public interface Observateur {
    public void reagir() ;
}
