@startuml
skinparam class {
   BackgroundColor<<java>> Wheat
   BorderColor<<java>> Tomato
}

hide stereotype

package "modele" {
    class String
    interface Iterable{
        + Iterator<Article> iterator()
    }

    class Article{
        - String nom
        - double prix
        - String imgUrl
        - boolean disponible
        - String descript
        + Article(String nom, double prix, String imgUrl, boolean disponible, String descript, Categorie categorie, String... motsCles)
        + void setNom(String nom)
        + void setPrix(double prix)
        + void setDescription(String description)
        + void setDisponibilite(boolean b)
        + void setImgUrl(String imgUrl)
        + void ajouterMotsCles(String... motsCles)
        + void supprimerMotCle(String cle)
    }

    enum Categorie {
        Plat
        Accompagnement
        Dessert
        Boisson
    }

    class Facade extends SujetObserve implements Iterable<Article>{
           - modeAjout : boolean
          + Facade()
          + ajouter(nom: String, prix: double, imgUrl: String, descript: String, categorie: Categorie, motsCles: String...)
          + supprimer(article: Article)
          + setCategorieSelectionnee(categorie: String)
          + getArticleCourant() : Article
          + precedent()
          + suivant()
          + setModeEdition(b: boolean)
          + iteratorFiltre() : Iterator<Article>
          + iterator() : Iterator<Article>
          + estModeEdition() : boolean
          + setIndexArticleCourant(a: Article)
          + estmodeAjout() : boolean
          + setModeAjout(b: boolean)
          + ajouterNouvel()
          + sauvegarderJSON(cheminFichier: String)
          + chargerJSON(cheminFichier: String)
          + trierArticlesParNom()
          + trierArticlesParPrix()

    }

    class CollectionArticle {
        - boolean modeEdition
        - int indexArticleCourant
        + CollectionArticle()
          + ajouter(article: Article)
          + supprimer(article: Article)
          + setCategorieSelectionnee(categorie: Categorie)
          + setIndexArticleCourant(index: int)
          + setModeEdition(b: boolean)
          + getIndexArticleCourant() : int
          + getArticleCourant() : Article
          + getArticlesFiltres() : List<Article>
          + estModeEdition() : boolean
          + getCategorieSelectionnee() : Categorie
          + iterator() : Iterator<Article>
          + iteratorFiltre() : Iterator<Article>
          + getnbArticles() : int
          + getnbArticlesFiltres() : int
          + setIndexArticleCourant(a: Article)
          + trierParNom()
          + trierParPrix()

    }

    class SujetObserve{
        + void ajouterObservateur(Observateur obs)
        + void notifierObservateur()
    }

}

package "vues" {
    class TextField<<java>>
    class TextArea<<java>>
    class CheckBox<<java>>
    class MenuItem<<java>>

    interface Observateur {
        + void reagir()
    }

    class VueCategorie {
        + VueCategorie(Facade facade)
        + void reagir()
        + setCategorieToPlat()
        + setCategorieToBoisson()
        + setCategorieToAccompagnement()
        + setCategorieToDessert()
    }
    class VueGlobale {
    +VueGlobale(Facade facade, GestionnaireDeVues gestionnaireDeVues)
        + void reagir()
    }
    class VueDetaillee {
        + VueDetails(Facade facade, GestionnaireDeVues gestionnaireDeVues)
            + void initialize()
            + void afficherModeConsultation()
            + void afficherModeEdition()
            + void afficherDonnees()
            + void remplirChampsEdition()
            + void ajouterMotCle()
            + void sauvegarder()
            + void annuler()
            + void basculerModeEdition()
            + void precedent()
            + void suivant()
            + void home()
            + void choisirImage(ActionEvent event)
            + void reagir()
            - void chargerTousLesMotsCles()
            - void configurerListViewEdition()
            - void showAlert(String titre, String message)
    }

    class VignetteArticle{
            + VignetteArticle(Facade facade, Article article)
            + void reagir()
            + void handleClick()
            - void supprimerArticle()
            - void detaillerArticle()
        }
     class VueMenu{
        + VueMenu(Facade facade)
        + void reagir()
        + void importerJson()
        + void SauvegarderJson()
        + void quitter()
        + void trierParNom()
        + void trierParPrix()
     }

     class GestionnaireDeVues {
       + GestionnaireDeVues(rootPane: BorderPane, facade: Facade)
       + void setVueMenu(vueMenu: Node)
       + void setVueGlobale(vueGlobale: Node, vueCategorie: Node)
       + void afficherVueGlobale()
       + void afficherVueDetails()
     }

}
Article --"1" Categorie
Article --"*" String : motCles
CollectionArticle --"1" Categorie
CollectionArticle --"*" Article
Facade --"1" CollectionArticle
SujetObserve "1" -- "*" Observateur
Observateur <|.. VueCategorie
Observateur <|.. VignetteArticle
Observateur <|.. VueGlobale
Observateur <|.. VueDetaillee
Observateur <|.. VueMenu
VueDetaillee --"3" TextField
VueDetaillee --"1" TextArea
VueDetaillee --"1" CheckBox
VueDetaillee --"1" GestionnaireDeVues
VueGlobale --"1" GestionnaireDeVues



@enduml
